fixed extra whitespace issue

--- a/frontend/app/stylesheets/style.styl
+++ b/frontend/app/stylesheets/style.styl
@@ -119,8 +119,8 @@ body
 
 #content
     height 70%
-    width 100%
-    margin 5%
+    width 90%
+    padding 5%
 
 #footer
     height 10%
